force-app/main/default/objects/CallReception__c/CallReception__c.object-meta.xml
<CustomObject>
    <label>コール受付</label>
    <nameField>
        <label>相手先番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>