force-app/main/default/objects/CallReception__c/fields/CounterpartyKana__c.field-meta.xml
<CustomField>
    <fullName>CounterpartyKana__c</fullName>
    <label>相手先カナ</label>
    <length>20</length>
    <type>Text</type>
</CustomField>