force-app/main/default/objects/CallReception__c/fields/DestinationCode__c.field-meta.xml
<CustomField>
    <fullName>DestinationCode__c</fullName>
    <label>相手先コード</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>