force-app/main/default/objects/CallReception__c/fields/DestinationName__c.field-meta.xml
<CustomField>
    <fullName>DestinationName__c</fullName>
    <label>相手先名</label>
    <length>10</length>
    <type>Text</type>
</CustomField>