force-app/main/default/objects/CallReception__c/fields/DestinationType__c.field-meta.xml
<CustomField>
    <fullName>DestinationType__c</fullName>
    <label>相手先タイプ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>タイプA</fullName>
            </value>
            <value>
                <fullName>タイプB</fullName>
            </value>
            <value>
                <fullName>タイプC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>