force-app/main/default/objects/CallReception__c/fields/FAXNumber__c.field-meta.xml
<CustomField>
    <fullName>FAXNumber__c</fullName>
    <label>FAX番号（施設or相手先）</label>
    <type>Phone</type>
</CustomField>