force-app/main/default/objects/CallReception__c/fields/PolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>PolicyNumber__c</fullName>
    <label>証券番号</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>