force-app/main/default/objects/CallReception__c/fields/TelephoneNumber__c.field-meta.xml
<CustomField>
    <fullName>TelephoneNumber__c</fullName>
    <label>電話番号（施設or相手先）</label>
    <type>Phone</type>
</CustomField>